--- a/package.json
+++ b/package.json
@@ -15,6 +15,25 @@
     "categories": [
         "Programming Languages"
     ],
+    "license":"MIT",
+	"activationEvents": [
+		"onLanguage:asm.*"
+	],
+	"main": "./out/extension.js",
+	"scripts": {
+		"vscode:prepublish": "npm run compile",
+		"compile": "tsc -p ./",
+		"lint": "eslint \"src/**/*.ts\"",
+		"watch": "tsc -watch -p ./"
+	},
+	"devDependencies": {
+		"@types/node": "^18",
+		"@types/vscode": "^1.73.0",
+		"@typescript-eslint/eslint-plugin": "^7.14.0",
+		"@typescript-eslint/parser": "^7.14.0",
+		"eslint": "^8.26.0",
+		"typescript": "^5.5.2"
+	},
     "contributes": {
         "languages": [
             {
