--- a/language-configuration.json
+++ b/language-configuration.json
@@ -1,7 +1,8 @@
 {
     "comments": {
         // symbol used for single line comment. Remove this entry if your language does not support line comments
-        "lineComment": ";"
+        "lineComment": ";",
+        "blockComment": ["\tIF 0\n", "\tENDC\n"]
     },
     // symbols used as brackets
     "brackets": [
@@ -28,6 +29,8 @@
     // indent after label and outdent if a label is defined at an indented position
     "indentationRules": {
         "increaseIndentPattern": "^(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)$",
-        "decreaseIndentPattern": "^(\\s*\\.?[A-Za-z_][A-Za-z0-9_]*:)|(([0-9]+)\\$)$"   
-    }
+        "decreaseIndentPattern": "^(\\s+(([A-Za-z_][A-Za-z0-9_]*:)|(([0-9]+)\\$)|(\\.[A-Za-z_][A-Za-z0-9_]+)))$"   
+    },
+//    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
+    "wordPattern": "(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)|(\\$[0-9a-fA-F]+)|([0-9]+)|(\\%[01]+)"
 }
