--- a/language-configuration.json
+++ b/language-configuration.json
@@ -31,6 +31,6 @@
         "increaseIndentPattern": "^(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)$",
         "decreaseIndentPattern": "^(\\s+(([A-Za-z_][A-Za-z0-9_]*:)|(([0-9]+)\\$)|(\\.[A-Za-z_][A-Za-z0-9_]+)))$"   
     },
-//    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
-    "wordPattern": "(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)|(\\$[0-9a-fA-F]+)|([0-9]+)|(\\%[01]+)"
+//    "wordPattern": "(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)|(\\$[0-9a-fA-F]+)|([0-9]+)|(\\%[01]+)"
+    "wordPattern": "a^"
 }
