--- a/language-configuration.json
+++ b/language-configuration.json
@@ -28,9 +28,9 @@
     ],
     // indent after label and outdent if a label is defined at an indented position
     "indentationRules": {
-        "increaseIndentPattern": "^(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)$",
+        "increaseIndentPattern": "^((\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$))$",
         "decreaseIndentPattern": "^(\\s+(([A-Za-z_][A-Za-z0-9_]*:)|(([0-9]+)\\$)|(\\.[A-Za-z_][A-Za-z0-9_]+)))$"   
     },
-//    "wordPattern": "(-?\\d*\\.\\d\\w*)|([^\\`\\~\\!\\@\\#\\%\\^\\&\\*\\(\\)\\-\\=\\+\\[\\{\\]\\}\\\\\\|\\;\\:\\'\\\"\\,\\.\\<\\>\\/\\?\\s]+)"
-    "wordPattern": "(\\.?[A-Za-z_][A-Za-z0-9_]*)|(([0-9]+)\\$)|(\\$[0-9a-fA-F]+)|([0-9]+)|(\\%[01]+)"
+
+    "wordPattern": "(\\.?[A-Za-z_][A-Za-z0-9_]*)|([0-9]+\\$)"
 }
